Fixed map scaling on smaller screens

--- a/perks/style.css
+++ b/perks/style.css
@@ -298,6 +298,7 @@ body {
 #mapContainer {
     width: 80dvw;
     height: 80dvh;
+    min-width: 800px;
     margin: auto;
     /*background-color: white;*/
     position: absolute;
